# ufit-sales-agent

./: .cspell.json  CENARIOS_COMPLETOS.md  CENARIOS_FECHAMENTO.md  CENARIOS_PROSPECCAO.md  COMO_CRIAR_REPOSITORIO.md  DATABASE_README.md  GITHUB_SETUP.md  INTERFACE_COMPACTA.md  INTERFACE_ULTRA_COMPACTA.md  LICENSE  MELHORIAS_USABILIDADE.md  NOVA_ESTRUTURA_AREAS.md  README.md  SOLUCAO_AUTO_RELOAD.md  adicionar_16_cenarios_restantes.py  adicionar_26_cenarios_vendas.py  adicionar_rapido.py  adicionar_resposta.py  criar_26_cenarios_vendas.py  criar_manual.ps1  criar_repo_final.py  criar_repo_github.py  criar_repo_novo.py  criar_repositorio.ps1  criar_repositorio.py  criar_vendas_26_cenarios.py  custom_responses.json  example_playbook.json  examples.py  gerar_cenarios_fechamento.py  gerar_cenarios_prospeccao.py  gerar_vendas_completo.py  implementar_26_cenarios_completos.py  main.py  pyproject.toml  reiniciar_streamlit.bat  reiniciar_streamlit.py  requirements.txt  streamlit_app.py  streamlit_database.py  (+6 more)
.github/workflows/: python-app.yml
.streamlit/: config.toml
database/: areas_config.json  vendas_26_cenarios.json  vendas_completo_26.json  vendas_completo_unificado.json  vendas_detalhado.json  vendas_scenarios.json
knowledge_base/: sales_playbook.json  sales_playbook.yaml
sales_agent/: __init__.py  agent.py
